--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,16 @@ Django==1.10.1
 Pillow==3.4.2
 argparse==1.2.1
 diff-match-patch==20121119
+django-adminactions==1.2
 django-import-export==0.5.1
+future==0.16.0
 pdfkit==0.5.0
 psycopg2==2.6.2
+pytz==2016.10
+six==1.10.0
 tablib==0.11.2
+unicodecsv==0.14.1
 wsgiref==0.1.2
+xlrd==1.0.0
 xlwt==1.1.2
+xlwt-future==0.8.0
