--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 Django==1.10.1
 Pillow==3.4.2
+PyYAML==3.12
 argparse==1.2.1
 diff-match-patch==20121119
 django-adminactions==1.2
+django-fontawesome==0.3.1
+django-geoposition==0.3.0
 django-import-export==0.5.1
 future==0.16.0
 pdfkit==0.5.0
