--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,19 @@ django-fontawesome==0.3.1
 django-geoposition==0.3.0
 django-import-export==0.5.1
 future==0.16.0
+oauthlib==2.0.1
 pdfkit==0.5.0
 Pillow==3.4.2
 psycopg2==2.6.2
+PyJWT==1.4.2
+python-openid==2.2.5
 pytz==2016.10
 PyYAML==3.12
+requests==2.13.0
+requests-oauthlib==0.8.0
 six==1.10.0
+social-auth-app-django==1.1.0
+social-auth-core==1.2.0
 tablib==0.11.2
 unicodecsv==0.14.1
 xlrd==1.0.0
