--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,19 @@ django-fontawesome==0.3.1
 django-geoposition==0.3.0
 django-import-export==0.5.1
 future==0.16.0
+Naked==0.1.31
 oauthlib==2.0.1
 pdfkit==0.5.0
 Pillow==3.4.2
 psycopg2==2.6.2
+pycrypto==2.6.1
 PyJWT==1.4.2
 python-openid==2.2.5
 pytz==2016.10
 PyYAML==3.12
 requests==2.13.0
 requests-oauthlib==0.8.0
+shellescape==3.4.1
 six==1.10.0
 social-auth-app-django==1.1.0
 social-auth-core==1.2.0
