--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
-Django==1.10.1
-Naked==0.1.31
-Pillow==3.4.2
-PyJWT==1.4.2
-PyYAML==3.12
-argparse==1.2.1
 diff-match-patch==20121119
+Django==1.10.1
 django-adminactions==1.2
+django-background-task==0.1.8
 django-colorfield==0.1.12
 django-fontawesome==0.3.1
 django-geoposition==0.3.0
 django-grappelli==2.9.1
 django-import-export==0.5.1
 future==0.16.0
+Naked==0.1.31
 oauthlib==2.0.1
 pdfkit==0.5.0
+Pillow==3.4.2
+pkg-resources==0.0.0
 psycopg2==2.6.2
 pycrypto==2.6.1
+PyJWT==1.4.2
 python-openid==2.2.5
 pytz==2016.10
+PyYAML==3.12
 requests==2.13.0
 requests-oauthlib==0.8.0
 shellescape==3.4.1
@@ -26,7 +27,6 @@ social-auth-app-django==1.1.0
 social-auth-core==1.2.0
 tablib==0.11.2
 unicodecsv==0.14.1
-wsgiref==0.1.2
 xlrd==1.0.0
 xlwt==1.1.2
 xlwt-future==0.8.0
